// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchicalMenuFilter tests should render 2nd level correctly with selected 3rd level 1`] = `
<div class="sk-panel filter--categories">
  <div class="sk-panel__header">Categories</div>
  <div class="sk-panel__content">
    <div class="sk-hierarchical-menu-list__root">
      <div class="sk-hierarchical-menu-list__hierarchical-options">
        <div>
          <div class="sk-hierarchical-menu-option sk-hierarchical-menu-list__item is-active" data-qa="option" data-key="Red">
            <div data-qa="label" class="sk-hierarchical-menu-option__text">Red</div>
            <div data-qa="count" class="sk-hierarchical-menu-option__count">#10</div>
          </div>
          <div class="sk-hierarchical-menu-list__hierarchical-options">
            <div>
              <div class="sk-hierarchical-menu-option sk-hierarchical-menu-list__item" data-qa="option" data-key="Crimson">
                <div data-qa="label" class="sk-hierarchical-menu-option__text">Crimson</div>
                <div data-qa="count" class="sk-hierarchical-menu-option__count">#10</div>
              </div>
            </div>
            <div>
              <div class="sk-hierarchical-menu-option sk-hierarchical-menu-list__item is-active" data-qa="option" data-key="Maroon">
                <div data-qa="label" class="sk-hierarchical-menu-option__text">Maroon</div>
                <div data-qa="count" class="sk-hierarchical-menu-option__count">#12</div>
              </div>
              <div class="sk-hierarchical-menu-list__hierarchical-options"></div>
            </div>
          </div>
        </div>
        <div>
          <div class="sk-hierarchical-menu-option sk-hierarchical-menu-list__item" data-qa="option" data-key="Green">
            <div data-qa="label" class="sk-hierarchical-menu-option__text">Green</div>
            <div data-qa="count" class="sk-hierarchical-menu-option__count">#20</div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HierarchicalMenuFilter tests should render first level correctly 1`] = `
<div class="sk-panel filter--categories">
  <div class="sk-panel__header">Categories</div>
  <div class="sk-panel__content">
    <div class="sk-hierarchical-menu-list__root">
      <div class="sk-hierarchical-menu-list__hierarchical-options">
        <div>
          <div class="sk-hierarchical-menu-option sk-hierarchical-menu-list__item" data-qa="option" data-key="Red">
            <div data-qa="label" class="sk-hierarchical-menu-option__text">Red</div>
            <div data-qa="count" class="sk-hierarchical-menu-option__count">#10</div>
          </div>
        </div>
        <div>
          <div class="sk-hierarchical-menu-option sk-hierarchical-menu-list__item" data-qa="option" data-key="Green">
            <div data-qa="label" class="sk-hierarchical-menu-option__text">Green</div>
            <div data-qa="count" class="sk-hierarchical-menu-option__count">#20</div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
